# delicious_town_bot

./: .env.example  .gitignore  cleanup_cookbook_functions.py  main.py  pyproject.toml  temp_task.py
data/: initial_accounts_example.json
docs/actions/: challenge.md  cookbook.md  cupboard.md  depot.md  friend.md  match.md
src/delicious_town_bot/: cli.py  constants.py  search.py  test.py
src/delicious_town_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/delicious_town_bot/actions/: active_task.py  base_action.py  challenge.py  cookbook.py  cooking.py  cupboard.py  daily.py  daily_tasks.py  depot.py  equip.py  food.py  friend.py  gem_refining.py  lottery.py  match.py  restaurant.py  shop.py  specialty_food.py  task.py  user_card.py  vip.py
src/delicious_town_bot/assets/: cookbook.xlsx  foods.json
src/delicious_town_bot/data/: specialty_food_packs.py  vip_shop_items.py
src/delicious_town_bot/db/: models.py  session.py
src/delicious_town_bot/plugins/clicker/: account_selector.py  cookbook_page.py  daily_tasks_page.py  daily_tasks_redesigned.py  enhanced_accounts_page.py  enhanced_fuel_operations.py  equipment_inventory_dialog.py  game_operations_page.py  match_ranking_page.py  ui.py  (+4 more)
src/delicious_town_bot/scripts/: account_init.py  register.py  run_newbie_tutorial.py  set_restaurant.py
src/delicious_town_bot/utils/: account_manager.py  auth.py  captcha_solver.py  depot_manager.py  friend_cache_manager.py  friend_oil_manager.py  game_data.py  restaurant_id_manager.py  special_food_manager.py
tests/: test_account_manager.py
